--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -191,8 +191,8 @@ document.addEventListener("DOMContentLoaded", function() {
   var getJSON = function(url, callback) {
       var xhr = new XMLHttpRequest();
       xhr.open('GET', url, false);
-      xhr.setRequestHeader("Accept", 'application/json');
-      xhr.setRequestHeader("Access-Control-Allow-Origin", '*');
+      xhr.setRequestHeader("content-type", "application/json");
+      xhr.setRequestHeader("Accept", "application/json");
       xhr.send();
       return xhr.response
   };
