--- a/layouts/shortcodes/tabs.html
+++ b/layouts/shortcodes/tabs.html
@@ -5,7 +5,7 @@
     </div>
     <div class="col col--9 code-with-header">
       <div class="code-with-header">
-        <div class="code-header">{{ .Get 0 }}</div>
+        {{ if .Get 0 }}<div class="code-header">{{ .Get 0 }}</div>{{ end }}
         <div class="scrollbar-container tab-content">
             {{ .Inner }}
         </div>
