--- a/layouts/partials/top_list_generic.html
+++ b/layouts/partials/top_list_generic.html
@@ -1,5 +1,5 @@
 {{ partial "head.html" . }}
-<body class="list h-feed">
+<body class="list">
   <div>
     {{ partial "menu.html" . }}
     <div class="main-wrapper">
@@ -9,4 +9,4 @@
           </h2>
         </div>
       </header>
-      <main class="hfeed container" id="content" role="main">
+      <main class="container" id="content" role="main">
