--- a/layouts/partials/top_single.html
+++ b/layouts/partials/top_single.html
@@ -14,4 +14,4 @@
           </h2>
         </div>
       </header>
-      <main class="hfeed container" id="content" role="main">
+      <main class="container" id="content" role="main">
