Removed ghost and flex css and reduced a lot of unneeded css

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -121,11 +121,8 @@
   }
 </style>
 
-<link rel="stylesheet" href="/css/goblin.css">
 <link rel="stylesheet" href="/css/fontawesome.css">
 <link rel="stylesheet" href="/css/primer.css">
-<!-- <link rel="stylesheet" href="/css/ghost.css"> -->
-<link rel="stylesheet" href="/css/flex.css">
 <link rel="stylesheet" href="/css/glyphicons.css">
 <link rel="stylesheet" href="/css/pseudocode.css">
 <link rel="stylesheet" href="/javascripts/cal-heatmap/cal-heatmap.css">
@@ -183,7 +180,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <script type="text/javascript" src="/javascripts/cal-heatmap/plugins/LegendLite.js"></script>
 <script type="text/javascript" src="/javascripts/cal-heatmap/plugins/Tooltip.js"></script>
 <script type="text/javascript" src="/javascripts/cal-heatmap/plugins/CalendarLabel.js"></script>
-<script type="module">
+<script type="module" defer>
 
 
   var getJSON = function(url, callback) {
