--- a/layouts/shortcodes/info-buttons.html
+++ b/layouts/shortcodes/info-buttons.html
@@ -1,8 +1,8 @@
-<section style="margin-top:100px;padding:50px 0;border-top:1px solid var(--custom-border-color)" class="hero is--dark">
+<section class="info-buttons">
   <div class="container text--center">
     <div>
-      <a class="button hero--button button--outline button--md button--secondary responsive-button button_2W20" style="margin:5px" href="{{ .Get 1 }}">{{ .Get 0 }}</a>
-      <a class="button hero--button button--md button--primary responsive-button button_2W20" to="https://git.qoto.org/goblin-ogm/goblin" style="margin:5px" href="{{ .Get 3 }}">{{ .Get 2 }}</a>
+      <a class="button button-secondary button-outline" href="{{ .Get 1 }}">{{ .Get 0 }}</a>
+      <a class="button button-primary" to="https://git.qoto.org/goblin-ogm/goblin" href="{{ .Get 3 }}">{{ .Get 2 }}</a>
     </div>
   </div>
 </section>
