--- a/layouts/shortcodes/titled.html
+++ b/layouts/shortcodes/titled.html
@@ -1,8 +1,8 @@
-<section class="forDevelopers_1bbC">
+<section>
   <div class="container">
-    <div class="row responsiveCentered_2A7S">
-      <div class="col col--6 col--offset-3">
-        <h2 class="with-underline">{{ .Get 0 }}</h2>
+    <div class="row center">
+      <div class="col center-text">
+        <h2>{{ .Get 0 }}</h2>
         <p>{{ .Get 1 }}</p>
       </div>
     </div>
