--- a/layouts/shortcodes/gitlab-heatmap.html
+++ b/layouts/shortcodes/gitlab-heatmap.html
@@ -1,4 +1,4 @@
 <div id="cal-heatmap-container">
-  <div id="cal-heatmap" class="cal-heatmap center"></div>
-  <div id="cal-heatmap-legend" class="cal-heatmap-legend center"></div>
+  <div id="cal-heatmap" class="cal-heatmap"></div>
+  <div id="cal-heatmap-legend" class="cal-heatmap-legend"></div>
 </div>
