--- a/layouts/shortcodes/tab.html
+++ b/layouts/shortcodes/tab.html
@@ -1,4 +1,4 @@
-<div class="codeBlockWrapper_2QGZ tab-pane" title="{{ .Get 0 }}">
+<div class="codeBlockWrapper tab-pane" title="{{ .Get 0 }}">
+  <button type="button" aria-label="Copy code to clipboard" class="copyButton">Copy</button>
   {{ .Inner }}
-  <button type="button" aria-label="Copy code to clipboard" class="copyButton_1BYj">Copy</button>
 </div>
