Organized CSS into sections

--- a/layouts/shortcodes/info-buttons.html
+++ b/layouts/shortcodes/info-buttons.html
@@ -1,5 +1,5 @@
 <section class="info-buttons">
-  <div class="container text--center">
+  <div class="container text-center">
     <div>
       <a class="button button-secondary button-outline" href="{{ .Get 1 }}">{{ .Get 0 }}</a>
       <a class="button button-primary" to="https://git.qoto.org/goblin-ogm/goblin" href="{{ .Get 3 }}">{{ .Get 2 }}</a>
