--- a/layouts/shortcodes/tabs.html
+++ b/layouts/shortcodes/tabs.html
@@ -1,5 +1,5 @@
-<div class="ForDevelopers">
-  <div class="row code-tabs">
+<div class="code-tabs">
+  <div class="row code-tabs__inner">
     <div class="ButtonTabs col col--3">
       <div class="nav nav-tabs"></div>
     </div>
