Changed several scripts to deferrred to improve load time

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -171,15 +171,15 @@ document.addEventListener("DOMContentLoaded", function() {
     "HTML-CSS": { fonts: ["TeX"] }
   });
 </script>
-<script type="text/javascript" src="/javascripts/mathjax/tex-chtml-full.js"></script>
+<script type="text/javascript" src="/javascripts/mathjax/tex-chtml-full.js" defer></script>
 
-<script type="text/javascript" src="/javascripts/d3.js"></script>
-<script type="text/javascript" src="/javascripts/popperjs/popper.js"></script>
-<script type="text/javascript" src="/javascripts/cal-heatmap/cal-heatmap.js"></script>
-<script type="text/javascript" src="/javascripts/cal-heatmap/plugins/Legend.js"></script>
-<script type="text/javascript" src="/javascripts/cal-heatmap/plugins/LegendLite.js"></script>
-<script type="text/javascript" src="/javascripts/cal-heatmap/plugins/Tooltip.js"></script>
-<script type="text/javascript" src="/javascripts/cal-heatmap/plugins/CalendarLabel.js"></script>
+<script type="text/javascript" src="/javascripts/d3.js" defer></script>
+<script type="text/javascript" src="/javascripts/popperjs/popper.js" defer></script>
+<script type="text/javascript" src="/javascripts/cal-heatmap/cal-heatmap.js" defer></script>
+<script type="text/javascript" src="/javascripts/cal-heatmap/plugins/Legend.js" defer></script>
+<script type="text/javascript" src="/javascripts/cal-heatmap/plugins/LegendLite.js" defer></script>
+<script type="text/javascript" src="/javascripts/cal-heatmap/plugins/Tooltip.js" defer></script>
+<script type="text/javascript" src="/javascripts/cal-heatmap/plugins/CalendarLabel.js" defer></script>
 <script type="module" defer>
 
 
